# university-notes

./: .gitignore
bachelor-1/semester-1/: preamble.tex
bachelor-1/semester-1/analytical-geometry/: info.yaml  master.dvi  master.fdb_latexmk  master.fls  master.tex
bachelor-1/semester-1/computer-logic-1/: info.yaml  lec_01.tex  lec_02.tex  lec_03.tex  lec_04.tex  lec_05.tex  lec_06.tex  lec_07.tex  master.dvi  master.fdb_latexmk  master.fls  master.tex
bachelor-1/semester-1/discrete-maths/: info.yaml  master.dvi  master.fdb_latexmk  master.fls  master.tex
bachelor-1/semester-1/programming-principles-in-c/labs/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  conv  factorial  fibonacci  gcd  labs.cbp
bachelor-1/semester-1/programming-principles-in-c/labs/control-flow/2/: factorial
bachelor-1/semester-1/programming-principles-in-c/labs/control-flow/3/: pin-check
bachelor-1/semester-1/programming-principles-in-c/labs/control-flow/4/: mult-row
bachelor-1/semester-1/programming-principles-in-c/labs/control-flow/5/: averages
bachelor-1/semester-1/programming-principles-in-c/labs/control-flow/6/: taxes  taxes.c
bachelor-1/semester-1/programming-principles-in-c/labs/controlflow/: CMakeLists.txt  q3.c  q7.c
bachelor-1/semester-1/programming-principles-in-c/labs/dataflow/: q1  q1.c  q2  q2.c  q3  q3.c  q4  q4.c
bachelor-1/semester-1/programming-principles-in-c/labs/modularity/: converter.c  factorial.c  fibonacci.c  gcd.c
bachelor-1/semester-2/: preamble.tex
bachelor-1/semester-2/dsa/: info.yaml
(+81 files in other folders)
